# cedra-network

./: .backportrc.json  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  RUST_CODING_STYLE.md  RUST_SECURE_CODING.md  SECURITY.md  flake.nix
api/: Cargo.toml  Makefile  README.md
api/doc/: CHANGELOG.md  README.md  spec.html  spec.json  spec.yaml
api/fuzzing/: README.md
api/goldens/: aptos_api__tests__transactions_test__test_get_transactions_output_genesis_transaction.json  aptos_api__tests__transactions_test__test_get_transactions_param_limit_exceeds_limit.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_module_name.json  cedra_api__tests__invalid_post_request_test__test_invalid_payload_type.json  cedra_api__tests__transactions_test__test_get_transaction_by_hash_with_delayed_internal_indexer.json  cedra_api__tests__transactions_test__test_get_transactions_output_genesis_transaction.json  cedra_api__tests__transactions_test__test_get_transactions_output_user_transaction_with_entry_function_payload.json  cedra_api__tests__transactions_test__test_get_transactions_param_limit_exceeds_limit.json  cedra_api__tests__transactions_test__test_get_transactions_returns_last_page_when_start_version_is_not_specified.json  cedra_api__tests__transactions_test__test_get_txn_execute_failed_by_entry_function_validation.json  cedra_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_address.json  cedra_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_arguments.json  cedra_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_name.json  cedra_api__tests__transactions_test__test_get_txn_execute_failed_by_missing_entry_function_arguments.json  cedra_api__tests__transactions_test__test_post_bcs_format_transaction.json  cedra_api__tests__transactions_test__test_simulation_failure_with_detail_error.json  cedra_api__tests__transactions_test__test_simulation_failure_with_move_abort_error_rendering.json
api/move-test-package/: Move.toml
api/openapi-spec-generator/: Cargo.toml
api/openapi-spec-generator/src/: fake_context.rs  main.rs
api/src/: accept_type.rs  accounts.rs  basic.rs  bcs_payload.rs  blocks.rs  check_size.rs  context.rs  error_converter.rs  events.rs  failpoint.rs  index.rs  lib.rs  log.rs  metrics.rs  page.rs  response.rs  runtime.rs  set_failpoints.rs  spec.rs  state.rs  transactions.rs  view_function.rs
api/src/tests/: account_abstraction_test.rs  accounts_test.rs  blocks_test.rs  converter_test.rs  event_v2_translation_test.rs  events_test.rs  function_value_test.rs  index_test.rs  invalid_post_request_test.rs  mod.rs  modules.rs  multisig_transactions_test.rs  objects.rs  resource_groups.rs  secp256k1_ecdsa.rs  simulation_test.rs  state_test.rs  string_resource_test.rs  transaction_vector_test.rs  transactions_test.rs  view_function.rs  webauthn_secp256r1_ecdsa.rs
api/test-context/: Cargo.toml
api/test-context/move/: Move.toml
api/test-context/src/: golden_output.rs  lib.rs  test_context.rs
api/types/: Cargo.toml
api/types/src/: account.rs  address.rs  block.rs  bytecode.rs  convert.rs  derives.rs  error.rs  hash.rs  headers.rs  index.rs  ledger_info.rs  lib.rs  mime_types.rs  move_types.rs  state.rs  table.rs  transaction.rs  view.rs  wrappers.rs
cedra-move/block-executor/: Cargo.toml
cedra-move/block-executor/benches/: scheduler_benches.rs
cedra-move/block-executor/src/: captured_reads.rs  code_cache.rs  (+18 more)
cedra-move/cedra-abstract-gas-usage/: Cargo.toml
cedra-move/cedra-debugger/: Cargo.toml
cedra-move/cedra-e2e-comparison-testing/: Cargo.toml
cedra-move/cedra-gas-calibration/: Cargo.toml  README.md
cedra-move/cedra-gas-meter/: Cargo.toml
cedra-move/cedra-gas-profiling/: Cargo.toml  README.md
cedra-move/cedra-gas-schedule/: Cargo.toml  mass_mod.py
cedra-move/cedra-oracle/: Cargo.toml
cedra-move/cedra-release-builder/: Cargo.toml
cedra-move/cedra-transaction-benchmarks/: Cargo.toml
cedra-move/cedra-transaction-simulation/: Cargo.toml
cedra-move/cedra-transactional-test-harness/: Cargo.toml
cedra-move/cedra-validator-interface/: Cargo.toml
cedra-move/cedra-vm-benchmarks/: Cargo.toml  README.md
cedra-move/cedra-vm-environment/: Cargo.toml
cedra-move/cedra-vm-logging/: Cargo.toml
cedra-node/: Cargo.toml
cedra-node/src/: consensus.rs  indexer.rs  lib.rs  logger.rs  main.rs  network.rs  services.rs  state_sync.rs  storage.rs  tests.rs  utils.rs
config/: Cargo.toml  README.md
config/global-constants/: Cargo.toml
config/src/: generator.rs  keys.rs  lib.rs  network_id.rs  utils.rs
consensus/: Cargo.toml  README.md
consensus/consensus-types/: Cargo.toml
consensus/safety-rules/: Cargo.toml
consensus/src/: block_preparer.rs  consensus_provider.rs  counters.rs  epoch_manager.rs  error.rs  execution_pipeline.rs  lib.rs  logging.rs  metrics_safety_rules.rs  network.rs  network_interface.rs  network_tests.rs  pending_order_votes.rs  pending_votes.rs  pending_votes_test.rs  persistent_liveness_storage.rs  recovery_manager.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs  state_computer.rs  state_computer_tests.rs  state_replication.rs  transaction_deduper.rs  txn_hash_and_authenticator_deduper.rs  txn_notifier.rs
dkg/: Cargo.toml
dkg/src/: agg_trx_producer.rs  counters.rs  epoch_manager.rs  lib.rs  network.rs  network_interface.rs  types.rs
mempool/: Cargo.toml  README.md
mempool/src/: counters.rs  lib.rs  logging.rs  thread_pool.rs
oracle/: Cargo.toml  build.rs
oracle/proto/: pricefeed.proto
oracle/src/: config.rs  lib.rs  manager.rs  whitelist.rs
oracles/: Cargo.toml  README.md  build.rs
oracles/proto/: pricefeed.proto
oracles/src/: counters.rs  epoch_manager.rs  fetch_price.rs  fetcher.rs  lib.rs  network.rs  network_interface.rs  observer.rs  store.rs  types.rs  whitelist.rs
vm-validator/: Cargo.toml
vm-validator/src/: lib.rs  vm_validator.rs
(+5307 files in other folders)
