[workspace]
resolver = "2"

members = [
    "api",
    "api/openapi-spec-generator",
    "api/test-context",
    "api/types",
    "cedra-move/cedra-abstract-gas-usage",
    "cedra-move/cedra-aggregator",
    "cedra-move/cedra-debugger",
    "cedra-move/cedra-e2e-comparison-testing",
    "cedra-move/cedra-gas-algebra",
    "cedra-move/cedra-gas-calibration",
    "cedra-move/cedra-gas-meter",
    "cedra-move/cedra-gas-profiling",
    "cedra-move/cedra-gas-schedule",
    "cedra-move/cedra-gas-schedule-updator",
    "cedra-move/cedra-memory-usage-tracker",
    "cedra-move/cedra-native-interface",
    "cedra-move/cedra-release-builder",
    "cedra-move/cedra-resource-viewer",
    "cedra-move/cedra-sdk-builder",
    "cedra-move/cedra-transaction-benchmarks",
    "cedra-move/cedra-transaction-simulation",
    "cedra-move/cedra-transactional-test-harness",
    "cedra-move/cedra-validator-interface",
    "cedra-move/cedra-vm",
    "cedra-move/cedra-vm-benchmarks",
    "cedra-move/cedra-vm-environment",
    "cedra-move/cedra-vm-logging",
    "cedra-move/cedra-vm-profiling",
    "cedra-move/cedra-vm-types",
    "cedra-move/cedra-workspace-server",
    "cedra-move/block-executor",
    "cedra-move/e2e-benchmark",
    "cedra-move/e2e-move-tests",
    "cedra-move/e2e-tests",
    "cedra-move/e2e-testsuite",
    "cedra-move/framework",
    "cedra-move/framework/cached-packages",
    "cedra-move/framework/table-natives",
    "cedra-move/move-examples",
    "cedra-move/mvhashmap",
    "cedra-move/package-builder",
    "cedra-move/replay-benchmark",
    "cedra-move/script-composer",
    "cedra-move/vm-genesis",
    "cedra-node",
    "config",
    "config/global-constants",
    "consensus",
    "consensus/consensus-types",
    "consensus/safety-rules",
    "crates/cedra",
    "crates/cedra-admin-service",
    "crates/cedra-api-tester",
    "crates/cedra-bcs-utils",
    "crates/cedra-bitvec",
    "crates/cedra-build-info",
    "crates/cedra-collections",
    "crates/cedra-compression",
    "crates/cedra-crypto",
    "crates/cedra-crypto-derive",
    "crates/cedra-debugger",
    "crates/cedra-dkg",
    "crates/cedra-drop-helper",
    "crates/cedra-enum-conversion-derive",
    "crates/cedra-faucet/cli",
    "crates/cedra-faucet/core",
    "crates/cedra-faucet/metrics-server",
    "crates/cedra-faucet/service",
    "crates/cedra-genesis",
    "crates/cedra-github-client",
    "crates/cedra-id-generator",
    "crates/cedra-infallible",
    "crates/cedra-inspection-service",
    "crates/cedra-jwk-consensus",
    "crates/cedra-keygen",
    "crates/cedra-ledger",
    "crates/cedra-localnet",
    "crates/cedra-log-derive",
    "crates/cedra-logger",
    "crates/cedra-metrics-core",
    "crates/cedra-network-checker",
    "crates/cedra-node-identity",
    "crates/cedra-openapi",
    "crates/cedra-profiler",
    "crates/cedra-proptest-helpers",
    "crates/cedra-push-metrics",
    "crates/cedra-rate-limiter",
    "crates/cedra-rest-client",
    "crates/cedra-retrier",
    "crates/cedra-rosetta",
    "crates/cedra-rosetta-cli",
    "crates/cedra-runtimes",
    "crates/cedra-speculative-state-helper",
    "crates/cedra-system-utils",
    "crates/cedra-telemetry",
    "crates/cedra-telemetry-service",
    "crates/cedra-temppath",
    "crates/cedra-time-service",
    "crates/cedra-warp-webserver",
    "crates/bounded-executor",
    "crates/channel",
    "crates/crash-handler",
    "crates/fallible",
    "crates/indexer",
    "crates/jwk-utils",
    "crates/node-resource-metrics",
    "crates/num-variants",
    "crates/proxy",
    "crates/reliable-broadcast",
    "crates/short-hex-str",
    "crates/transaction-emitter",
    "crates/transaction-emitter-lib",
    "crates/transaction-generator-lib",
    "crates/transaction-workloads-lib",
    "crates/validator-transaction-pool",
    "devtools/cedra-cargo-cli",
    "dkg",
    "ecosystem/indexer-grpc/indexer-grpc-cache-worker",
    "ecosystem/indexer-grpc/indexer-grpc-data-service",
    "ecosystem/indexer-grpc/indexer-grpc-data-service-v2",
    "ecosystem/indexer-grpc/indexer-grpc-file-checker",
    "ecosystem/indexer-grpc/indexer-grpc-file-store",
    "ecosystem/indexer-grpc/indexer-grpc-file-store-backfiller",
    "ecosystem/indexer-grpc/indexer-grpc-fullnode",
    "ecosystem/indexer-grpc/indexer-grpc-in-memory-cache-benchmark",
    "ecosystem/indexer-grpc/indexer-grpc-manager",
    "ecosystem/indexer-grpc/indexer-grpc-server-framework",
    "ecosystem/indexer-grpc/indexer-grpc-table-info",
    "ecosystem/indexer-grpc/indexer-grpc-utils",
    "ecosystem/indexer-grpc/indexer-test-transactions",
    "ecosystem/indexer-grpc/indexer-transaction-generator",
    "ecosystem/indexer-grpc/transaction-filter",
    "ecosystem/nft-metadata-crawler",
    "ecosystem/node-checker",
    "ecosystem/node-checker/fn-check-client",
    "execution/block-partitioner",
    "execution/executor",
    "execution/executor-benchmark",
    "execution/executor-service",
    "execution/executor-test-helpers",
    "execution/executor-types",
    "experimental/bulk-txn-submit",
    "experimental/execution/ptx-executor",
    "experimental/runtimes",
    "experimental/storage/hexy",
    "experimental/storage/layered-map",
    "keyless/pepper/common",
    "keyless/pepper/example-client-rust",
    "keyless/pepper/service",
    "mempool",
    "network/benchmark",
    "network/builder",
    "network/discovery",
    "network/framework",
    "network/memsocket",
    "network/netcore",
    "peer-monitoring-service/client",
    "peer-monitoring-service/server",
    "peer-monitoring-service/types",
    "protos/rust",
    "sdk",
    "secure/net",
    "secure/storage",
    "secure/storage/vault",
    "state-sync/cedra-data-client",
    "state-sync/data-streaming-service",
    "state-sync/inter-component/consensus-notifications",
    "state-sync/inter-component/event-notifications",
    "state-sync/inter-component/mempool-notifications",
    "state-sync/inter-component/storage-service-notifications",
    "state-sync/state-sync-driver",
    "state-sync/storage-service/client",
    "state-sync/storage-service/server",
    "state-sync/storage-service/types",
    "storage/accumulator",
    "storage/cedradb",
    "storage/backup/backup-cli",
    "storage/backup/backup-service",
    "storage/db-tool",
    "storage/indexer",
    "storage/indexer_schemas",
    "storage/jellyfish-merkle",
    "storage/rocksdb-options",
    "storage/schemadb",
    "storage/scratchpad",
    "storage/storage-interface",
    "testsuite/forge",
    "testsuite/forge-cli",
    "testsuite/fuzzer",
    "testsuite/fuzzer/fuzz",
    "testsuite/generate-format",
    "testsuite/module-publish",
    "testsuite/smoke-test",
    "testsuite/testcases",
    "third_party/move/extensions/move-table-extension",
    "third_party/move/move-binary-format",
    "third_party/move/move-binary-format/serializer-tests",
    "third_party/move/move-borrow-graph",
    "third_party/move/move-bytecode-spec",
    "third_party/move/move-bytecode-verifier",
    "third_party/move/move-bytecode-verifier/bytecode-verifier-tests",
    "third_party/move/move-bytecode-verifier/fuzz",
    "third_party/move/move-bytecode-verifier/invalid-mutations",
    "third_party/move/move-bytecode-verifier/transactional-tests",
    "third_party/move/move-command-line-common",
    "third_party/move/move-compiler-v2",
    "third_party/move/move-compiler-v2/legacy-move-compiler",
    "third_party/move/move-compiler-v2/transactional-tests",
    "third_party/move/move-core/types",
    "third_party/move/move-examples",
    "third_party/move/move-ir-compiler",
    "third_party/move/move-ir-compiler/move-bytecode-source-map",
    "third_party/move/move-ir-compiler/move-ir-to-bytecode",
    "third_party/move/move-ir-compiler/move-ir-to-bytecode/syntax",
    "third_party/move/move-ir-compiler/transactional-tests",
    "third_party/move/move-ir/types",
    "third_party/move/move-model",
    "third_party/move/move-model/bytecode",
    "third_party/move/move-model/bytecode-test-utils",
    "third_party/move/move-model/bytecode/ast-generator-tests",
    "third_party/move/move-prover",
    "third_party/move/move-prover/boogie-backend",
    "third_party/move/move-prover/bytecode-pipeline",
    "third_party/move/move-prover/lab",
    "third_party/move/move-prover/move-abigen",
    "third_party/move/move-prover/move-docgen",
    "third_party/move/move-prover/move-errmapgen",
    "third_party/move/move-prover/test-utils",
    "third_party/move/move-symbol-pool",
    "third_party/move/move-vm/integration-tests",
    "third_party/move/move-vm/metrics",
    "third_party/move/move-vm/paranoid-tests",
    "third_party/move/move-vm/runtime",
    "third_party/move/move-vm/test-utils",
    "third_party/move/move-vm/transactional-tests",
    "third_party/move/move-vm/types",
    "third_party/move/testing-infra/transactional-test-runner",
    "third_party/move/tools/move-bytecode-utils",
    "third_party/move/tools/move-bytecode-viewer",
    "third_party/move/tools/move-cli",
    "third_party/move/tools/move-coverage",
    "third_party/move/tools/move-decompiler",
    "third_party/move/tools/move-disassembler",
    "third_party/move/tools/move-linter",
    "third_party/move/tools/move-package",
    "third_party/move/tools/move-resource-viewer",
    "third_party/move/tools/move-unit-test",
    "tools/calc-dep-sizes",
    "tools/compute-module-expansion-size",
    "types",
    "vm-validator",
    "oracle"
]

# NOTE: default-members is the complete list of binaries that form the "production Cedra codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "cedra-node",
    "consensus/safety-rules",
    "crates/cedra",
    "crates/cedra-debugger",
    "crates/cedra-faucet/service",
    "crates/cedra-keygen",
    "crates/cedra-rate-limiter",
    "crates/cedra-rosetta",
    "crates/transaction-emitter",
    "cedra-move/framework",
    "storage/backup/backup-cli",
    "ecosystem/node-checker",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Cedra Labs <opensource@cedra.network>"]
edition = "2021"
homepage = "https://cedra.network/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/cedra-labs/cedra"
rust-version = "1.86.0"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
cedra = { path = "crates/cedra" }
cedra-oracle-runtime =  { path = "oracle" }
cedra-accumulator = { path = "storage/accumulator" }
cedra-admin-service = { path = "crates/cedra-admin-service" }
cedra-aggregator = { path = "cedra-move/cedra-aggregator" }
cedra-api = { path = "api" }
cedra-api-test-context = { path = "api/test-context" }
cedra-api-types = { path = "api/types" }
cedra-backup-cli = { path = "storage/backup/backup-cli" }
cedra-backup-service = { path = "storage/backup/backup-service" }
cedra-bcs-utils = { path = "crates/cedra-bcs-utils" }
cedra-bounded-executor = { path = "crates/bounded-executor" }
cedra-block-executor = { path = "cedra-move/block-executor" }
cedra-bitvec = { path = "crates/cedra-bitvec" }
cedra-build-info = { path = "crates/cedra-build-info" }
cedra-cached-packages = { path = "cedra-move/framework/cached-packages" }
cedra-channels = { path = "crates/channel" }
cedra-cli-common = { path = "crates/cedra-cli-common" }
cedra-collections = { path = "crates/cedra-collections" }
cedra-compression = { path = "crates/cedra-compression" }
cedra-consensus = { path = "consensus" }
cedra-consensus-notifications = { path = "state-sync/inter-component/consensus-notifications" }
cedra-consensus-types = { path = "consensus/consensus-types" }
cedra-config = { path = "config" }
cedra-crash-handler = { path = "crates/crash-handler" }
cedra-crypto = { path = "crates/cedra-crypto" }
cedra-crypto-derive = { path = "crates/cedra-crypto-derive" }
cedra-data-client = { path = "state-sync/cedra-data-client" }
cedra-data-streaming-service = { path = "state-sync/data-streaming-service" }
cedra-db = { path = "storage/cedradb" }
cedra-db-indexer = { path = "storage/indexer" }
cedra-db-indexer-schemas = { path = "storage/indexer_schemas" }
cedra-db-tool = { path = "storage/db-tool" }
cedra-debugger = { path = "crates/cedra-debugger" }
cedra-dkg = { path = "crates/cedra-dkg" }
cedra-dkg-runtime = { path = "dkg" }
cedra-drop-helper = { path = "crates/cedra-drop-helper" }
cedra-event-notifications = { path = "state-sync/inter-component/event-notifications" }
cedra-executor = { path = "execution/executor" }
cedra-block-partitioner = { path = "execution/block-partitioner" }
cedra-enum-conversion-derive = { path = "crates/cedra-enum-conversion-derive" }
cedra-executor-service = { path = "execution/executor-service" }
cedra-executor-test-helpers = { path = "execution/executor-test-helpers" }
cedra-executor-types = { path = "execution/executor-types" }
cedra-experimental-hexy = { path = "experimental/storage/hexy" }
cedra-experimental-bulk-txn-submit = { path = "experimental/bulk-txn-submit" }
cedra-experimental-layered-map = { path = "experimental/storage/layered-map" }
cedra-experimental-ptx-executor = { path = "experimental/execution/ptx-executor" }
cedra-experimental-runtimes = { path = "experimental/runtimes" }
cedra-faucet-cli = { path = "crates/cedra-faucet/cli" }
cedra-faucet-core = { path = "crates/cedra-faucet/core" }
cedra-faucet-service = { path = "crates/cedra-faucet/service" }
cedra-faucet-metrics-server = { path = "crates/cedra-faucet/metrics-server" }
cedra-fallible = { path = "crates/fallible" }
cedra-forge = { path = "testsuite/forge" }
cedra-framework = { path = "cedra-move/framework" }
fuzzer = { path = "testsuite/fuzzer" }
cedra-abstract-gas-usage = { path = "cedra-move/cedra-abstract-gas-usage" }
cedra-gas-meter = { path = "cedra-move/cedra-gas-meter" }
cedra-gas-algebra = { path = "cedra-move/cedra-gas-algebra" }
cedra-gas-calibration = { path = "cedra-move/cedra-gas-calibration" }
cedra-gas-profiling = { path = "cedra-move/cedra-gas-profiling" }
cedra-gas-schedule = { path = "cedra-move/cedra-gas-schedule" }
cedra-gas-schedule-updator = { path = "cedra-move/cedra-gas-schedule-updator" }
cedra-genesis = { path = "crates/cedra-genesis" }
cedra-github-client = { path = "crates/cedra-github-client" }
cedra-global-constants = { path = "config/global-constants" }
cedra-id-generator = { path = "crates/cedra-id-generator" }
cedra-indexer = { path = "crates/indexer" }
cedra-indexer-grpc-cache-worker = { path = "ecosystem/indexer-grpc/indexer-grpc-cache-worker" }
cedra-indexer-grpc-data-service = { path = "ecosystem/indexer-grpc/indexer-grpc-data-service" }
cedra-indexer-grpc-data-service-v2 = { path = "ecosystem/indexer-grpc/indexer-grpc-data-service-v2" }
cedra-indexer-grpc-file-store = { path = "ecosystem/indexer-grpc/indexer-grpc-file-store" }
cedra-indexer-grpc-file-checker = { path = "ecosystem/indexer-grpc/indexer-grpc-file-checker" }
cedra-indexer-grpc-file-store-backfiller = { path = "ecosystem/indexer-grpc/indexer-grpc-file-store-backfiller" }
cedra-indexer-grpc-fullnode = { path = "ecosystem/indexer-grpc/indexer-grpc-fullnode" }
cedra-indexer-grpc-in-memory-cache-benchmark = { path = "ecosystem/indexer-grpc/indexer-grpc-in-memory-cache-benchmark" }
cedra-indexer-grpc-manager = { path = "ecosystem/indexer-grpc/indexer-grpc-manager" }
cedra-indexer-grpc-table-info = { path = "ecosystem/indexer-grpc/indexer-grpc-table-info" }
cedra-indexer-test-transactions = { path = "ecosystem/indexer-grpc/indexer-test-transactions" }
cedra-indexer-grpc-utils = { path = "ecosystem/indexer-grpc/indexer-grpc-utils" }
cedra-indexer-grpc-server-framework = { path = "ecosystem/indexer-grpc/indexer-grpc-server-framework" }
cedra-indexer-transaction-generator = { path = "ecosystem/indexer-grpc/indexer-transaction-generator" }
cedra-infallible = { path = "crates/cedra-infallible" }
cedra-inspection-service = { path = "crates/cedra-inspection-service" }
cedra-jellyfish-merkle = { path = "storage/jellyfish-merkle" }
cedra-jwk-consensus = { path = "crates/cedra-jwk-consensus" }
cedra-jwk-utils = { path = "crates/jwk-utils" }
cedra-keygen = { path = "crates/cedra-keygen" }
cedra-language-e2e-tests = { path = "cedra-move/e2e-tests" }
cedra-ledger = { path = "crates/cedra-ledger" }
cedra-localnet = { path = "crates/cedra-localnet" }
cedra-log-derive = { path = "crates/cedra-log-derive" }
cedra-logger = { path = "crates/cedra-logger" }
cedra-memory-usage-tracker = { path = "cedra-move/cedra-memory-usage-tracker" }
cedra-mempool = { path = "mempool" }
cedra-mempool-notifications = { path = "state-sync/inter-component/mempool-notifications" }
cedra-memsocket = { path = "network/memsocket" }
cedra-metrics-core = { path = "crates/cedra-metrics-core" }
cedra-move-debugger = { path = "cedra-move/cedra-debugger" }
cedra-move-examples = { path = "cedra-move/move-examples" }
cedra-move-e2e-benchmark = { path = "cedra-move/e2e-benchmark" }
cedra-mvhashmap = { path = "cedra-move/mvhashmap" }
cedra-native-interface = { path = "cedra-move/cedra-native-interface" }
cedra-netcore = { path = "network/netcore" }
cedra-network = { path = "network/framework" }
cedra-network-benchmark = { path = "network/benchmark" }
cedra-network-builder = { path = "network/builder" }
cedra-network-checker = { path = "crates/cedra-network-checker" }
cedra-network-discovery = { path = "network/discovery" }
cedra-nft-metadata-crawler = { path = "ecosystem/nft-metadata-crawler" }
cedra-node = { path = "cedra-node" }
cedra-node-checker = { path = "ecosystem/node-checker" }
cedra-node-identity = { path = "crates/cedra-node-identity" }
cedra-node-resource-metrics = { path = "crates/node-resource-metrics" }
cedra-num-variants = { path = "crates/num-variants" }
cedra-openapi = { path = "crates/cedra-openapi" }
cedra-package-builder = { path = "cedra-move/package-builder" }
cedra-peer-monitoring-service-client = { path = "peer-monitoring-service/client" }
cedra-peer-monitoring-service-server = { path = "peer-monitoring-service/server" }
cedra-peer-monitoring-service-types = { path = "peer-monitoring-service/types" }
cedra-keyless-common = { path = "keyless/common" }
cedra-keyless-pepper-common = { path = "keyless/pepper/common" }
cedra-keyless-pepper-service = { path = "keyless/pepper/service" }
cedra-profiler = { path = "crates/cedra-profiler" }
cedra-proptest-helpers = { path = "crates/cedra-proptest-helpers" }
cedra-protos = { path = "protos/rust" }
cedra-proxy = { path = "crates/proxy" }
cedra-push-metrics = { path = "crates/cedra-push-metrics" }
cedra-rate-limiter = { path = "crates/cedra-rate-limiter" }
cedra-release-builder = { path = "cedra-move/cedra-release-builder" }
cedra-reliable-broadcast = { path = "crates/reliable-broadcast" }
cedra-replay-benchmark = { path = "cedra-move/replay-benchmark" }
cedra-resource-viewer = { path = "cedra-move/cedra-resource-viewer" }
cedra-rest-client = { path = "crates/cedra-rest-client" }
cedra-retrier = { path = "crates/cedra-retrier" }
cedra-rocksdb-options = { path = "storage/rocksdb-options" }
cedra-rosetta = { path = "crates/cedra-rosetta" }
cedra-runtimes = { path = "crates/cedra-runtimes" }
cedra-safety-rules = { path = "consensus/safety-rules" }
cedra-schemadb = { path = "storage/schemadb" }
cedra-scratchpad = { path = "storage/scratchpad" }
cedra-script-composer = { path = "cedra-move/script-composer" }
cedra-sdk = { path = "sdk" }
cedra-sdk-builder = { path = "cedra-move/cedra-sdk-builder" }
cedra-secure-net = { path = "secure/net" }
cedra-secure-storage = { path = "secure/storage" }
cedra-short-hex-str = { path = "crates/short-hex-str" }
cedra-speculative-state-helper = { path = "crates/cedra-speculative-state-helper" }
cedra-state-sync-driver = { path = "state-sync/state-sync-driver" }
cedra-storage-interface = { path = "storage/storage-interface" }
cedra-storage-service-client = { path = "state-sync/storage-service/client" }
cedra-storage-service-notifications = { path = "state-sync/inter-component/storage-service-notifications" }
cedra-storage-service-types = { path = "state-sync/storage-service/types" }
cedra-storage-service-server = { path = "state-sync/storage-service/server" }
cedra-system-utils = { path = "crates/cedra-system-utils" }
cedra-transaction-filter = { path = "ecosystem/indexer-grpc/transaction-filter" }
cedra-telemetry = { path = "crates/cedra-telemetry" }
cedra-telemetry-service = { path = "crates/cedra-telemetry-service" }
cedra-temppath = { path = "crates/cedra-temppath" }
cedra-testcases = { path = "testsuite/testcases" }
cedra-time-service = { path = "crates/cedra-time-service", features = [
    "async",
] }
cedra-transaction-emitter-lib = { path = "crates/transaction-emitter-lib" }
cedra-transaction-generator-lib = { path = "crates/transaction-generator-lib" }
cedra-transaction-workloads-lib = { path = "crates/transaction-workloads-lib" }
cedra-transaction-simulation = { path = "cedra-move/cedra-transaction-simulation" }
cedra-transactional-test-harness = { path = "cedra-move/cedra-transactional-test-harness" }
cedra-types = { path = "types" }
cedra-validator-interface = { path = "cedra-move/cedra-validator-interface" }
cedra-validator-transaction-pool = { path = "crates/validator-transaction-pool" }
cedra-vault-client = { path = "secure/storage/vault" }
cedra-vm = { path = "cedra-move/cedra-vm" }
cedra-vm-environment = { path = "cedra-move/cedra-vm-environment" }
cedra-vm-logging = { path = "cedra-move/cedra-vm-logging" }
cedra-vm-genesis = { path = "cedra-move/vm-genesis" }
cedra-vm-types = { path = "cedra-move/cedra-vm-types" }
cedra-vm-validator = { path = "vm-validator" }
cedra-workspace-server = { path = "cedra-move/cedra-workspace-server" }
cedra-warp-webserver = { path = "crates/cedra-warp-webserver" }
cedra-cargo-cli = { path = "devtools/cedra-cargo-cli" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aes-gcm = "0.10.3"
ahash = { version = "0.8.11", features = ["serde"] }
atty = "0.2.14"
nalgebra = "0.32"
float-cmp = "0.9.0"
again = "0.1.2"
ambassador = "0.4.1"
anyhow = "1.0.98"
anstyle = "1.0.1"
arbitrary = { version = "1.3.2", features = ["derive"] }
arc-swap = "1.6.0"
arr_macro = "0.2.1"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
cedra-indexer-processor-sdk = { git = "https://github.com/cedra-labs/cedra-indexer-processor-sdk.git", rev="9fa9182285cf696da11a126f9739258afc72a3e2", features = [
    "postgres_partial",
] }
cedra-moving-average = { git = "https://github.com/cedra-labs/cedra-indexer-processor-sdk.git", rev="9fa9182285cf696da11a126f9739258afc72a3e2" } 
assert_approx_eq = "1.1.0"
async-channel = "1.7.1"
async-mutex = "1.4.0"
async-recursion = "1.0.5"
async-trait = "0.1.53"
axum = "0.7.5"
base64 = "0.13.0"
backoff = { version = "0.4.0", features = ["tokio"] }
backtrace = "0.3.58"
bcs = { git = "https://github.com/cedra-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
better_any = "0.1.1"
bigdecimal = { version = "0.4.0", features = ["serde"] }
version-compare = "0.1.1"
bitvec = "1.0.1"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
blst = "0.3.11"
# The __private_bench feature exposes the Fp12 type which we need to implement a multi-threaded multi-pairing.
blstrs = { version = "0.7.1", features = ["serde", "__private_bench"] }
bollard = "0.15"
build_html = "2.5.0"
bulletproofs = { version = "4.0.0" }
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
bytesize = { version = "1.3.0" }
camino = { version = "1.1.6" }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
chrono-tz = "0.10.1"
cfg-if = "1.0.0"
ciborium = "0.2"
claims = "0.7"
clap = { version = "4.3.9", features = [
    "derive",
    "env",
    "unstable-styles",
    "wrap_help",
] }
clap-verbosity-flag = "2.1.1"
clap_complete = "4.4.1"
cloud-storage = { version = "0.11.1", features = [
    "global-client",
    "rustls-tls",
], default-features = false }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
concurrent-queue = "2.2.0"
console-subscriber = "0.3.0"
core_affinity = "0.8.1"
coset = "0.3"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
crossterm = "0.26.1"
csv = "1.2.1"
curve25519-dalek = "3"
curve25519-dalek-ng = "4"
dashmap = { version = "5.5.3", features = ["inline"] }
datatest-stable = "0.1.1"
debug-ignore = { version = "1.0.3", features = ["serde"] }
derivative = "2.2.0"
derivation-path = "0.2.0"
derive_builder = "0.20.0"
determinator = "0.12.0"
derive_more = "0.99.11"
diesel = { version = "2.2.0", features = ["uuid"] }
# Use the crate version once this feature gets released on crates.io:
# https://github.com/weiznich/diesel_async/commit/e165e8c96a6c540ebde2d6d7c52df5c5620a4bf1
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "e3beac66cd41ab53d78a10328bb72f272103e5d1", features = [
    "async-connection-wrapper",
    "postgres",
    "bb8",
    "tokio",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
difference = "2.0.0"
digest = "0.9.0"
dir-diff = "0.3.2"
dirs = "5.0.1"
dirs-next = "2.0.0"
dunce = "1.0.4"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ed25519-dalek-bip32 = "0.2.0"
either = "1.6.1"
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
erased-serde = "0.3.13"
ethnum = "1.5.0"
ethers = { version = "2" }
dearbitrary = { version = "1.0.4", features = ["derive"] }
fail = "0.5.0"
ff = { version = "0.13", features = ["derive"] }
field_count = "0.1.1"
figment = { version = "0.10.19", features = ["yaml", "env"] }
file_diff = "1.0.0"
firebase-token = { git = "https://github.com/cedra-labs/firebase-token", rev = "34ea512d3d1fad6c11df3e7d82ff72beccc05836" }
firestore = "0.43.0"
fixed = "1.25.1"
flate2 = "1.0.24"
flexi_logger = "0.27.4"
futures = "0.3.29"
futures-channel = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
fxhash = "0.2.1"
getrandom = "0.2.2"
gcp-bigquery-client = "0.16.8"
get_if_addrs = "0.5.3"
git2 = "0.16.1"
glob = "0.3.0"
goldenfile = "1.5.2"
google-cloud-storage = "0.13.0"
group = "0.13"
guppy = "0.17.5"
handlebars = "4.2.2"
hashbrown = "0.14.3"
heck = "0.4.1"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.3.4"
hkdf = "0.10.0"
hmac = "0.12.0"
hostname = "0.3.1"
http = "0.2.9"
httpmock = "0.6.8"
hyper = { version = "0.14.18", features = ["full"] }
im = "15.0.0"
image = "0.24.5"
indexmap = "2.7.0"
indicatif = "0.15.0"
indoc = "1.0.6"
inferno = "0.11.14"
internment = { version = "0.5.0", features = ["arc"] }
ipnet = "2.5.0"
itertools = "0.13"
json-patch = "0.2.6"
jsonwebtoken = "8.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
libc = "0.2.147"
libfuzzer-sys = "0.4.6"
libsecp256k1 = "0.7.0"
libtest-mimic = "0.5.2"
log = "0.4.17"
lru = "0.7.5"
lz4 = "1.28.0"
maplit = "1.0.2"
merlin = "3"
memchr = "2.7.4"
memory-stats = "1.0.0"
mime = "0.3.16"
mini-moka = { version = "0.10.3", features = ["sync"] }
mirai-annotations = "1.12.0"
mockall = "0.11.4"
more-asserts = "0.3.0"
named-lock = "0.2.0"
native-tls = "0.2.10"
neptune = { version = "13.0.0", default-features = false }
ntest = "0.9.3"
num = "0.4.0"
num-bigint = { version = "0.3.2", features = ["rand"] }
num_cpus = "1.13.1"
num-derive = "0.4"
num-integer = "0.1.42"
num-traits = "0.2.15"
once_cell = "1.10.0"
open = "5.3.1"
ordered-float = "3.9.1"
ouroboros = "0.15.6"
owo-colors = "3.5.0"
p256 = { version = "0.13.2" }
prettydiff = "0.6.2"
primitive-types = { version = "0.10" }
signature = "2.1.0"
pairing = "0.23"
parking_lot = "0.12.0"
paste = "1.0.7"
pathsearch = "0.2.0"
passkey-authenticator = { version = "0.2.0", features = ["testable"] }
passkey-client = { version = "0.2.0" }
passkey-types = { version = "0.2.0" }
pbjson = "0.5.1"
percent-encoding = "2.1.0"
petgraph = "0.6.5"
pin-project = "1.0.10"
plotters = { version = "0.3.5", default-features = false }
poem = { version = "3.1.10", features = ["anyhow", "compression", "rustls"] }
poem-openapi = { version = "5.1.14", features = ["swagger-ui", "url"] }
poem-openapi-derive = "5.1.14"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git", rev = "6d2487aa1308d9d3860a2b724c485d73095c1c68" }
pprof = { version = "0.11", features = ["flamegraph", "protobuf-codec"] }
pretty = "0.10.0"
pretty_assertions = "1.2.1"
# We set default-features to false so we don't onboard the libpq dep. See more here:
# https://github.com/cedra-labs/cedra-network/pull/12568
processor = { git = "https://github.com/cedra-labs/cedra-indexer-processors-v2.git", default-features = false, rev = "1201abcff8a525a964f62e057c61246aba005234" } 
procfs = "0.14.1"
proc-macro2 = "1.0.38"
project-root = "0.2.2"
prometheus = { version = "0.13.3", default-features = false }
prometheus-http-query = "0.5.2"
prometheus-parse = "0.2.4"
proptest = "1.4.0"
proptest-derive = "0.5.1"
prost = { version = "0.13.4", features = ["no-recursion-limit"] }
prost-types = "0.13.3"
quanta = "0.10.1"
quick_cache = "0.5.1"
quick-junit = "0.5.0"
quote = "1.0.18"
rand = "0.7.3"
rand_core = "0.5.1"
random_word = "0.3.0"
rayon = "1.5.2"
redis = { version = "0.22.3", features = [
    "tokio-comp",
    "script",
    "connection-manager",
] }
redis-test = { version = "0.1.1", features = ["aio"] }
ref-cast = "1.0.6"
regex = "1.9.3"
reqwest = { version = "0.11.11", features = [
    "blocking",
    "cookies",
    "json",
    "multipart",
    "stream",
] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
ring = { version = "0.16.20", features = ["std"] }
ripemd = "0.1.1"
rlimit = "0.10.2"
rocksdb = { version = "0.22.0", features = ["lz4"] }
rsa = { version = "0.9.6" }
rstack-self = { version = "0.3.0", features = ["dw"], default-features = false }
rstest = "0.15.0"
rusty-fork = "0.3.0"
rustversion = "1.0.14"
scopeguard = "1.2.0"
sha2 = "0.9.3"
sha256 = "1.4.0"
sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
sha3 = "0.9.1"
shell-words = "1.0.0"
siphasher = "0.3.10"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
serde_repr = "0.1"
serde_merge = "0.1.3"
serde-name = "0.1.1"
serde-generate = { git = "https://github.com/cedra-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde-reflection = { git = "https://github.com/cedra-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde_with = "3.4.0"
serde_yaml = "0.8.24"
set_env = "1.3.4"
shadow-rs = "0.16.2"
simplelog = "0.9.0"
smallbitvec = "2.5.1"
smallvec = "1.8.0"
static_assertions = "1.1.0"
status-line = "0.2.0"
strum = "0.24.1"
strum_macros = "0.24.2"
sugars = "3.0.1"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
sysinfo = "0.28.4"
tar = "0.4.40"
tempfile = "3.3.0"
tera = "1.16.0"
termcolor = "1.1.2"
test-case = "3.1.0"
textwrap = "0.15.0"
thiserror = "1.0.37"
threadpool = "1.8.1"
thread_local = "1.1.7"
tiny-bip39 = "0.8.2"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
trybuild = "1.0.80"
try_match = "0.4.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-retry = "0.3.0"
tokio-scoped = { version = "0.2.0" }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.7.4"
tonic = { version = "0.12.3", features = [
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
    "zstd",
] }
tonic-reflection = "0.12.3"
topological-sort = "0.2.2"
triomphe = "0.1.9"
tui = "0.19.0"
typed-arena = "2.0.2"
typenum = "1.17.0"
uint = "0.9.4"
ureq = { version = "1.5.4", features = [
    "json",
    "native-tls",
], default-features = false }
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
variant_count = "1.1.0"
walkdir = "2.3.3"
warp = { version = "0.3.5", features = ["tls"] }
warp-reverse-proxy = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
which = "4.2.5"
whoami = "1.5.0"
# This allows for zeroize 1.6 to be used. Version 1.2.0 of x25519-dalek locks zeroize to 1.3.
x25519-dalek = { git = "https://github.com/cedra-labs/x25519-dalek", rev = "b9cdbaf36bf2a83438d9f660e5a708c82ed60d8e" }
z3tracer = "0.8.0"

# MOVE DEPENDENCIES
move-abigen = { path = "third_party/move/move-prover/move-abigen" }
move-binary-format = { path = "third_party/move/move-binary-format" }
move-borrow-graph = { path = "third_party/move/move-borrow-graph" }
move-bytecode-source-map = { path = "third_party/move/move-ir-compiler/move-bytecode-source-map" }
move-bytecode-spec = { path = "third_party/move/move-bytecode-spec" }
move-bytecode-verifier = { path = "third_party/move/move-bytecode-verifier" }
move-bytecode-verifier-invalid-mutations = { path = "third_party/move/move-bytecode-verifier/invalid-mutations" }
move-bytecode-viewer = { path = "third_party/move/tools/move-bytecode-viewer" }
move-bytecode-utils = { path = "third_party/move/tools/move-bytecode-utils" }
move-cli = { path = "third_party/move/tools/move-cli" }
move-command-line-common = { path = "third_party/move/move-command-line-common" }
move-coverage = { path = "third_party/move/tools/move-coverage" }
legacy-move-compiler = { path = "third_party/move/move-compiler-v2/legacy-move-compiler" }
move-compiler-v2 = { path = "third_party/move/move-compiler-v2" }
move-core-types = { path = "third_party/move/move-core/types" }
move-decompiler = { path = "third_party/move/tools/move-decompiler" }
move-docgen = { path = "third_party/move/move-prover/move-docgen" }
move-disassembler = { path = "third_party/move/tools/move-disassembler" }
move-errmapgen = { path = "third_party/move/move-prover/move-errmapgen" }
move-ir-types = { path = "third_party/move/move-ir/types" }
move-ir-compiler = { path = "third_party/move/move-ir-compiler" }
move-ir-to-bytecode = { path = "third_party/move/move-ir-compiler/move-ir-to-bytecode" }
move-linter = { path = "third_party/move/tools/move-linter" }
move-model = { path = "third_party/move/move-model" }
move-package = { path = "third_party/move/tools/move-package" }
move-prover = { path = "third_party/move/move-prover" }
move-prover-boogie-backend = { path = "third_party/move/move-prover/boogie-backend" }
move-prover-bytecode-pipeline = { path = "third_party/move/move-prover/bytecode-pipeline" }
move-prover-test-utils = { path = "third_party/move/move-prover/test-utils" }
move-prover-lab = { path = "third_party/move/move-prover/lab" }
cedra-move-stdlib = { path = "cedra-move/framework/move-stdlib" }
cedra-table-natives = { path = "cedra-move/framework/table-natives" }
move-resource-viewer = { path = "third_party/move/tools/move-resource-viewer" }
move-stackless-bytecode = { path = "third_party/move/move-model/bytecode" }
move-stackless-bytecode-test-utils = { path = "third_party/move/move-model/bytecode-test-utils" }
move-symbol-pool = { path = "third_party/move/move-symbol-pool" }
move-table-extension = { path = "third_party/move/extensions/move-table-extension" }
move-transactional-test-runner = { path = "third_party/move/testing-infra/transactional-test-runner" }
move-unit-test = { path = "third_party/move/tools/move-unit-test", features = [
    "table-extension",
] }
move-vm-metrics = { path = "third_party/move/move-vm/metrics" }
move-vm-runtime = { path = "third_party/move/move-vm/runtime" }
move-vm-test-utils = { path = "third_party/move/move-vm/test-utils", features = [
    "table-extension",
] }
move-vm-types = { path = "third_party/move/move-vm/types" }

[profile.release]
debug = true
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1

[profile.node]
inherits = "release"
debug = false
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1

[profile.ci]
inherits = "release"
debug = true
overflow-checks = true
debug-assertions = true

[profile.bench]
debug = true

[patch.crates-io]
serde-reflection = { git = "https://github.com/cedra-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/cedra-labs/merlin" }
futures = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }
futures-channel = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }
futures-executor = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }
futures-core = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }
futures-util = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }
futures-sink = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }
futures-io = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }
futures-task = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }
futures-macro = { git = "https://github.com/cedra-labs/futures-rs", branch = "backport" }

