[package]
name = "cedra-api"
description = "Cedra REST API"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cedra-api-types = { workspace = true }
cedra-bcs-utils = { workspace = true }
cedra-build-info = { workspace = true }
cedra-config = { workspace = true }
cedra-crypto = { workspace = true }
cedra-gas-schedule = { workspace = true }
cedra-global-constants = { workspace = true }
cedra-logger = { workspace = true }
cedra-mempool = { workspace = true }
cedra-metrics-core = { workspace = true }
cedra-runtimes = { workspace = true }
cedra-sdk = { workspace = true }
cedra-storage-interface = { workspace = true }
cedra-types = { workspace = true }
cedra-vm = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
mini-moka = { workspace = true }
move-core-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
cedra-api-test-context = { workspace = true }
cedra-cached-packages = { workspace = true }
cedra-framework = { workspace = true }
cedra-gas-meter = { workspace = true }
cedra-gas-schedule = { workspace = true, features = ["testing"] }
cedra-move-stdlib = { workspace = true }
cedra-proptest-helpers = { workspace = true }
move-package = { workspace = true }
passkey-types = { workspace = true }
percent-encoding = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
warp = { workspace = true }

[features]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["mime"]
